# beacon-eval-project

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  add_regressions_columns.py  alembic.ini  backfill_embeddings.py  check_columns.py  check_eval_runs_columns.py  check_judge_versions.py  check_pgvector.py  cleanup.py  create_document_chunks_table.py  create_knowledge_gaps_table.py  create_knowledge_table.py  fix_embedding_column.py  load_harvard_datasets.py  load_harvard_md_datasets.py  new_test.py  pyproject.toml  rag_migration.py  seed_hallucination_judge.py  seed_hms_knowledge.py  seed_hms_student_life.py  test.py  test_bedrock.py  test_langfuse.py  test_langfuse_async.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/beacon/: __init__.py  main.py
backend/beacon/auth/: __init__.py  dependencies.py
backend/beacon/core/: __init__.py  database.py  logging.py  settings.py
backend/beacon/integrations/: __init__.py  anthropic_client.py  anthropic_client_old.py  embeddings_client.py  langfuse_client.py  teams_webhook.py
backend/beacon/judges/: __init__.py  academic_integrity.py  accuracy.py  base.py  completeness.py  ferpa_compliance.py  hallucination_detection.py  mental_health_safety.py  tone.py
backend/beacon/models/: __init__.py  agent.py  dataset.py  eval.py  institution.py  judge.py  knowledge.py  trace.py  user.py
backend/beacon/repositories/: __init__.py  agent.py  base.py  dataset.py  eval.py  institution.py  judge.py
backend/beacon/routes/: agents.py  annotations.py  chat.py  compare.py  dashboard.py  datasets.py  document.py  institutions.py  judges.py  knowledge.py  programs.py  runs.py  sme.py  traces.py
backend/beacon/safety/: crisis_detection.py  ferpa.py  injection.py  redaction.py
backend/beacon/schemas/: __init__.py  agent.py  base.py  dataset.py  eval.py  institution.py  judge.py  knowledge.py  user.py
backend/beacon/scripts/: seed_dev_data.py
backend/beacon/services/: __init__.py  agent.py  dataset.py  document_ingestion.py  (+6 more)
backend/tests/: conftest.py
(+63 files in other folders)
