[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon"
version = "0.1.0"
description = "Student Agent Evaluation & Observability Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Cache & queue
    "redis>=5.0.4",
    "rq>=1.16.2",
    "rq-scheduler>=0.13.1",

    # LLM & tracing
    "anthropic>=0.28.0",
    "langfuse>=2.36.0",

    # Auth
    "msal>=1.29.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Safety / NLP
    "spacy>=3.7.4",

    # Azure
    "azure-storage-blob>=12.20.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-identity>=1.17.0",

    # Logging
    "structlog>=24.2.0",

    # Utilities
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "testcontainers[postgres,redis]>=4.7.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "schemathesis>=3.33.0",
    "locust>=2.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "safety_critical: marks tests as safety-critical (run on every PR touching judges/ or safety/)",
    "integration: marks tests requiring real Postgres and Redis",
]
addopts = "--cov=beacon --cov-report=term-missing --cov-fail-under=70"

[tool.hatch.build.targets.wheel]
packages = ["beacon"]
